--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyDiemSV
 excludes=
 file.reference.DateChooser.jar=C:\\Program Files (x86)\\NetBeans-11.0\\netbeans\\ide\\modules\\DateChooser.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Hiddenpants-H\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Hiddenpants-H\\Downloads\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
