--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=QuanLyDiemSV
+application.vendor=Hiddenpants-H
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,16 +33,55 @@ dist.jar=${dist.dir}/QuanLyDiemSV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyDiemSV
+endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\activation-1.1.1.jar
+file.reference.commons-codec-1.13.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-codec-1.13.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.19.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-compress-1.19.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.06.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\ooxml-lib\\curvesapi-1.06.jar
 file.reference.DateChooser.jar=C:\\Program Files (x86)\\NetBeans-11.0\\netbeans\\ide\\modules\\DateChooser.jar
+file.reference.jaxb-api-2.3.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-api-2.3.1.jar
+file.reference.jaxb-core-2.3.0.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-core-2.3.0.1.jar
+file.reference.jaxb-impl-2.3.2.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-impl-2.3.2.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Hiddenpants-H\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.junit-4.12.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\log4j-1.2.17.jar
 file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Hiddenpants-H\\Downloads\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
+file.reference.poi-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-4.1.1.jar
+file.reference.poi-examples-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-examples-4.1.1.jar
+file.reference.poi-excelant-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-excelant-4.1.1.jar
+file.reference.poi-ooxml-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-ooxml-4.1.1.jar
+file.reference.poi-ooxml-schemas-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-ooxml-schemas-4.1.1.jar
+file.reference.poi-scratchpad-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-scratchpad-4.1.1.jar
+file.reference.xmlbeans-3.1.0.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\ooxml-lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.poi-4.1.1.jar}:\
+    ${file.reference.poi-examples-4.1.1.jar}:\
+    ${file.reference.poi-excelant-4.1.1.jar}:\
+    ${file.reference.poi-ooxml-4.1.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.1.jar}:\
+    ${file.reference.poi-scratchpad-4.1.1.jar}:\
+    ${file.reference.curvesapi-1.06.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-codec-1.13.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.jaxb-api-2.3.1.jar}:\
+    ${file.reference.jaxb-core-2.3.0.1.jar}:\
+    ${file.reference.jaxb-impl-2.3.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
