--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,141 +1,98 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=QuanLyDiemSV
-application.vendor=Hiddenpants-H
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/QuanLyDiemSV.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/QuanLyDiemSV
-endorsed.classpath=
+#Wed Nov 20 08:50:00 ICT 2019
 excludes=
-file.reference.activation-1.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\activation-1.1.1.jar
-file.reference.commons-codec-1.13.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-codec-1.13.jar
-file.reference.commons-collections4-4.4.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-collections4-4.4.jar
-file.reference.commons-compress-1.19.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-compress-1.19.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-logging-1.2.jar
-file.reference.commons-math3-3.6.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-math3-3.6.1.jar
-file.reference.curvesapi-1.06.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\ooxml-lib\\curvesapi-1.06.jar
-file.reference.DateChooser.jar=C:\\Program Files (x86)\\NetBeans-11.0\\netbeans\\ide\\modules\\DateChooser.jar
-file.reference.jaxb-api-2.3.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-api-2.3.1.jar
-file.reference.jaxb-core-2.3.0.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-core-2.3.0.1.jar
-file.reference.jaxb-impl-2.3.2.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-impl-2.3.2.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Hiddenpants-H\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.junit-4.12.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\junit-4.12.jar
-file.reference.log4j-1.2.17.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\log4j-1.2.17.jar
-file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Hiddenpants-H\\Downloads\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
-file.reference.poi-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-4.1.1.jar
-file.reference.poi-examples-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-examples-4.1.1.jar
-file.reference.poi-excelant-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-excelant-4.1.1.jar
-file.reference.poi-ooxml-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-ooxml-4.1.1.jar
-file.reference.poi-ooxml-schemas-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-ooxml-schemas-4.1.1.jar
-file.reference.poi-scratchpad-4.1.1.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-scratchpad-4.1.1.jar
-file.reference.xmlbeans-3.1.0.jar=C:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\ooxml-lib\\xmlbeans-3.1.0.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.DateChooser.jar}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.poi-4.1.1.jar}:\
-    ${file.reference.poi-examples-4.1.1.jar}:\
-    ${file.reference.poi-excelant-4.1.1.jar}:\
-    ${file.reference.poi-ooxml-4.1.1.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.1.jar}:\
-    ${file.reference.poi-scratchpad-4.1.1.jar}:\
-    ${file.reference.curvesapi-1.06.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}:\
-    ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.commons-codec-1.13.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-compress-1.19.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.commons-math3-3.6.1.jar}:\
-    ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-core-2.3.0.1.jar}:\
-    ${file.reference.jaxb-impl-2.3.2.jar}:\
-    ${file.reference.junit-4.12.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=true
-javac.modulepath=
-javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=11
-javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.html5=false
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-# The jlink additional root modules to resolve
-jlink.additionalmodules=
-# The jlink additional command line parameters
-jlink.additionalparam=
-jlink.launcher=true
-jlink.launcher.name=QuanLyDiemSV
-main.class=com.qlsv.main.Main
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
-src.dir=src
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.processorpath=${javac.classpath}
+dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.poi-scratchpad-4.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-scratchpad-4.1.1.jar
 test.src.dir=test
+file.reference.DateChooser.jar=C\:\\Program Files (x86)\\NetBeans-11.0\\netbeans\\ide\\modules\\DateChooser.jar
+file.reference.junit-4.12.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\junit-4.12.jar
+file.reference.mysql-connector-java-8.0.17.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17\\mysql-connector-java-8.0.17.jar
+file.reference.curvesapi-1.06.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\ooxml-lib\\curvesapi-1.06.jar
+run.modulepath=${javac.modulepath}
+annotation.processing.enabled=true
+file.reference.jaxb-core-2.3.0.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-core-2.3.0.1.jar
+build.sysclasspath=ignore
+debug.modulepath=${run.modulepath}
+file.reference.commons-logging-1.2.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-logging-1.2.jar
+javac.compilerargs=
+javadoc.noindex=false
+javadoc.private=false
+file.reference.log4j-1.2.17.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\log4j-1.2.17.jar
+javadoc.author=false
+endorsed.classpath=
+main.class=com.qlsv.main.Main
+file.reference.poi-examples-4.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-examples-4.1.1.jar
+junit.selected.version=4
+source.encoding=UTF-8
+javac.source=11
+includes=**
+javadoc.use=true
+jar.compress=false
+javadoc.nonavbar=false
+annotation.processing.enabled.in.editor=false
+javadoc.notree=false
+annotation.processing.processors.list=
+file.reference.commons-math3-3.6.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-math3-3.6.1.jar
+application.vendor=Hiddenpants-H
+javac.deprecation=false
+jlink.launcher=true
+javadoc.additionalparam=
+file.reference.activation-1.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\activation-1.1.1.jar
+file.reference.poi-4.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-4.1.1.jar
+jlink.launcher.name=QuanLyDiemSV
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javac.processormodulepath=
+run.jvmargs=
+jlink.additionalmodules=
+javadoc.encoding=${source.encoding}
+javac.classpath=${file.reference.DateChooser.jar}\:${file.reference.mysql-connector-java-8.0.17.jar}\:${file.reference.jcalendar-1.4.jar}\:${file.reference.poi-4.1.1.jar}\:${file.reference.poi-examples-4.1.1.jar}\:${file.reference.poi-excelant-4.1.1.jar}\:${file.reference.poi-ooxml-4.1.1.jar}\:${file.reference.poi-ooxml-schemas-4.1.1.jar}\:${file.reference.poi-scratchpad-4.1.1.jar}\:${file.reference.curvesapi-1.06.jar}\:${file.reference.xmlbeans-3.1.0.jar}\:${file.reference.activation-1.1.1.jar}\:${file.reference.commons-codec-1.13.jar}\:${file.reference.commons-collections4-4.4.jar}\:${file.reference.commons-compress-1.19.jar}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.commons-math3-3.6.1.jar}\:${file.reference.jaxb-api-2.3.1.jar}\:${file.reference.jaxb-core-2.3.0.1.jar}\:${file.reference.jaxb-impl-2.3.2.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.log4j-1.2.17.jar}
+mkdist.disabled=false
+run.test.modulepath=${javac.test.modulepath}
+dist.jlink.dir=${dist.dir}/jlink
+build.classes.excludes=**/*.java,**/*.form
+dist.jar=${dist.dir}/QuanLyDiemSV.jar
+file.reference.jcalendar-1.4.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+build.classes.dir=${build.dir}/classes
+debug.test.modulepath=${run.test.modulepath}
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+file.reference.jaxb-api-2.3.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-api-2.3.1.jar
+file.reference.jaxb-impl-2.3.2.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\jaxb-impl-2.3.2.jar
+dist.dir=dist
+build.dir=build
+file.reference.poi-ooxml-4.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-ooxml-4.1.1.jar
+dist.archive.excludes=
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+file.reference.commons-compress-1.19.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-compress-1.19.jar
+file.reference.xmlbeans-3.1.0.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\ooxml-lib\\xmlbeans-3.1.0.jar
+build.generated.dir=${build.dir}/generated
+javadoc.version=false
+application.title=QuanLyDiemSV
+javac.test.modulepath=${javac.modulepath}
+debug.test.classpath=${run.test.classpath}
+javac.external.vm=true
+javac.target=11
+file.reference.poi-excelant-4.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-excelant-4.1.1.jar
+platform.active=default_platform
+manifest.file=manifest.mf
+javadoc.html5=false
+javac.test.processorpath=${javac.test.classpath}
+meta.inf.dir=${src.dir}/META-INF
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+file.reference.commons-codec-1.13.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-codec-1.13.jar
+file.reference.poi-ooxml-schemas-4.1.1.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\poi-ooxml-schemas-4.1.1.jar
+dist.jlink.output=${dist.jlink.dir}/QuanLyDiemSV
+file.reference.commons-collections4-4.4.jar=C\:\\Users\\Hiddenpants-H\\Downloads\\poi-bin-4.1.1-20191023\\poi-4.1.1\\lib\\commons-collections4-4.4.jar
+annotation.processing.run.all.processors=true
+javac.modulepath=
+src.dir=src
+jlink.additionalparam=
+debug.classpath=${run.classpath}
