--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,38 +1,20 @@
-#Wed Nov 20 08:50:00 ICT 2019
+#Sat Dec 21 09:47:25 ICT 2019
 excludes=
-file.reference.activation-1.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/activation-1.1.1.jar
-file.reference.commons-codec-1.13.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-codec-1.13.jar
-file.reference.commons-collections4-4.4.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-collections4-4.4.jar
-file.reference.commons-compress-1.19.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-compress-1.19.jar
-file.reference.commons-logging-1.2.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-logging-1.2.jar
-file.reference.commons-math3-3.6.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-math3-3.6.1.jar
-file.reference.curvesapi-1.06.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/ooxml-lib/curvesapi-1.06.jar
-file.reference.jaxb-api-2.3.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/jaxb-api-2.3.1.jar
-file.reference.jaxb-core-2.3.0.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/jaxb-core-2.3.0.1.jar
-file.reference.jaxb-impl-2.3.2.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/jaxb-impl-2.3.2.jar
-file.reference.jcalendar-1.4.jar-1=jcalendar-1.4.jar
-file.reference.junit-4.12.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/junit-4.12.jar
-file.reference.log4j-1.2.17.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/log4j-1.2.17.jar
-file.reference.mysql-connector-java-8.0.17.jar-1=mysql-connector-java-8.0.17.jar
-file.reference.poi-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-4.1.1.jar
-file.reference.poi-examples-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-examples-4.1.1.jar
-file.reference.poi-excelant-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-excelant-4.1.1.jar
-file.reference.poi-ooxml-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-ooxml-4.1.1.jar
-file.reference.poi-ooxml-schemas-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-ooxml-schemas-4.1.1.jar
-file.reference.poi-scratchpad-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-scratchpad-4.1.1.jar
-file.reference.xmlbeans-3.1.0.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/ooxml-lib/xmlbeans-3.1.0.jar
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-javac.processorpath=\
-    ${javac.classpath}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.processorpath=${javac.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.poi-scratchpad-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-scratchpad-4.1.1.jar
 test.src.dir=test
+file.reference.poi-excelant-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-excelant-4.1.1.jar
 run.modulepath=${javac.modulepath}
+file.reference.poi-ooxml-schemas-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-ooxml-schemas-4.1.1.jar
 annotation.processing.enabled=true
+file.reference.activation-1.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/activation-1.1.1.jar
 build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
 javac.compilerargs=
@@ -48,12 +30,15 @@ includes=**
 javadoc.use=true
 jar.compress=false
 javadoc.nonavbar=false
+file.reference.jaxb-impl-2.3.2.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/jaxb-impl-2.3.2.jar
 annotation.processing.enabled.in.editor=false
 javadoc.notree=false
+file.reference.commons-logging-1.2.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-logging-1.2.jar
 annotation.processing.processors.list=
 application.vendor=Hiddenpants-H
 javac.deprecation=false
 jlink.launcher=true
+file.reference.mysql-connector-java-8.0.17.jar-1=mysql-connector-java-8.0.17.jar
 javadoc.additionalparam=
 jlink.launcher.name=QuanLyDiemSV
 build.generated.sources.dir=${build.dir}/generated-sources
@@ -62,42 +47,34 @@ javac.processormodulepath=
 run.jvmargs=
 jlink.additionalmodules=
 javadoc.encoding=${source.encoding}
-javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar-1}:\
-    ${file.reference.poi-4.1.1.jar-1}:\
-    ${file.reference.poi-examples-4.1.1.jar-1}:\
-    ${file.reference.poi-excelant-4.1.1.jar-1}:\
-    ${file.reference.poi-ooxml-4.1.1.jar-1}:\
-    ${file.reference.poi-ooxml-schemas-4.1.1.jar-1}:\
-    ${file.reference.poi-scratchpad-4.1.1.jar-1}:\
-    ${file.reference.curvesapi-1.06.jar-1}:\
-    ${file.reference.xmlbeans-3.1.0.jar-1}:\
-    ${file.reference.activation-1.1.1.jar-1}:\
-    ${file.reference.commons-codec-1.13.jar-1}:\
-    ${file.reference.commons-collections4-4.4.jar-1}:\
-    ${file.reference.commons-compress-1.19.jar-1}:\
-    ${file.reference.commons-logging-1.2.jar-1}:\
-    ${file.reference.commons-math3-3.6.1.jar-1}:\
-    ${file.reference.jaxb-api-2.3.1.jar-1}:\
-    ${file.reference.jaxb-core-2.3.0.1.jar-1}:\
-    ${file.reference.jaxb-impl-2.3.2.jar-1}:\
-    ${file.reference.junit-4.12.jar-1}:\
-    ${file.reference.log4j-1.2.17.jar-1}
+javac.classpath=${file.reference.jcalendar-1.4.jar-1}\:${file.reference.mysql-connector-java-8.0.17.jar-1}\:${file.reference.poi-4.1.1.jar-1}\:${file.reference.poi-examples-4.1.1.jar-1}\:${file.reference.poi-excelant-4.1.1.jar-1}\:${file.reference.poi-ooxml-4.1.1.jar-1}\:${file.reference.poi-ooxml-schemas-4.1.1.jar-1}\:${file.reference.poi-scratchpad-4.1.1.jar-1}\:${file.reference.curvesapi-1.06.jar-1}\:${file.reference.xmlbeans-3.1.0.jar-1}\:${file.reference.activation-1.1.1.jar-1}\:${file.reference.commons-codec-1.13.jar-1}\:${file.reference.commons-collections4-4.4.jar-1}\:${file.reference.commons-compress-1.19.jar-1}\:${file.reference.commons-logging-1.2.jar-1}\:${file.reference.commons-math3-3.6.1.jar-1}\:${file.reference.jaxb-api-2.3.1.jar-1}\:${file.reference.jaxb-core-2.3.0.1.jar-1}\:${file.reference.jaxb-impl-2.3.2.jar-1}\:${file.reference.junit-4.12.jar-1}\:${file.reference.log4j-1.2.17.jar-1}
 mkdist.disabled=false
 run.test.modulepath=${javac.test.modulepath}
 dist.jlink.dir=${dist.dir}/jlink
 build.classes.excludes=**/*.java,**/*.form
 dist.jar=${dist.dir}/QuanLyDiemSV.jar
+file.reference.jaxb-api-2.3.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/jaxb-api-2.3.1.jar
 build.classes.dir=${build.dir}/classes
 debug.test.modulepath=${run.test.modulepath}
 build.test.classes.dir=${build.dir}/test/classes
 javadoc.windowtitle=
+file.reference.junit-4.12.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/junit-4.12.jar
 build.test.results.dir=${build.dir}/test/results
+file.reference.commons-compress-1.19.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-compress-1.19.jar
+file.reference.xmlbeans-3.1.0.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/ooxml-lib/xmlbeans-3.1.0.jar
+file.reference.poi-examples-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-examples-4.1.1.jar
+file.reference.jcalendar-1.4.jar-1=jcalendar-1.4.jar
+file.reference.poi-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-4.1.1.jar
+file.reference.commons-math3-3.6.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-math3-3.6.1.jar
+file.reference.commons-collections4-4.4.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-collections4-4.4.jar
+file.reference.jaxb-core-2.3.0.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/jaxb-core-2.3.0.1.jar
 dist.dir=dist
 build.dir=build
 dist.archive.excludes=
+file.reference.poi-ooxml-4.1.1.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/poi-ooxml-4.1.1.jar
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+file.reference.log4j-1.2.17.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/log4j-1.2.17.jar
+file.reference.curvesapi-1.06.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/ooxml-lib/curvesapi-1.06.jar
 build.generated.dir=${build.dir}/generated
 javadoc.version=false
 application.title=QuanLyDiemSV
@@ -108,11 +85,10 @@ javac.target=1.8
 platform.active=default_platform
 manifest.file=manifest.mf
 javadoc.html5=false
+file.reference.commons-codec-1.13.jar-1=poi-bin-4.1.1-20191023/poi-4.1.1/lib/commons-codec-1.13.jar
 javac.test.processorpath=${javac.test.classpath}
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/QuanLyDiemSV
 annotation.processing.run.all.processors=true
 javac.modulepath=
